# github-sync

./: Cargo.toml  README.md  example.toml
src/: config.rs  git.rs  github.rs  main.rs
