[package]
name = "github-sync"
version = "0.1.0"
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
erased-serde = "0.3.13"
regex = "1.4.3"
lazy_static = "1.4.0"
toml = "0.5.8"
getopts = "0.2.21"
slog = "2.7.0"
slog-term = "2.8.0"
rayon = "1.5.0"

[dependencies.openssl]
version = "0.10"
features = [ "vendored" ]

[dependencies.serde]
version = "1.0.123"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.11.1"
features = [ "blocking", "json" ]
