[package]
name = "github-sync"
version = "0.1.2"
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2018"
description = "Github repo backup utility"
license = "MIT"

[dependencies]
anyhow = "1.0.38"
erased-serde = "0.3.13"
getopts = "0.2.21"
git2 = "0.15"
lazy_static = "1.4.0"
rayon = "1.5.0"
regex = "1.4.3"
slog = "2.7.0"
slog-dtrace = "0.2"
slog-term = "2.8.0"
toml = "0.5.8"
usdt = "0.3"

[dependencies.serde]
version = "1.0.123"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.11.1"
features = [ "blocking", "json", "native-tls-vendored" ]
